# llm-processors

./: .gitignore  METHODS_SIMPLIFICATION.md  PROCESSORS_MODULARIZATION.md  README.md  pyproject.toml  requirements.txt  test_keys_demo.py  test_validation.py
core/: __init__.py  base.py  context.py  pipeline.py  processors.py
core/pipeline/: parallel_pipeline.py  sequential_pipeline.py
core/processors/: __init__.py  chat_processor.py  data_transform_processor.py  llm_processor.py  noop_processor.py  prompt_processor.py
docs/: ERROR_HANDLER_REFACTORING.md  INPUT_OUTPUT_KEY_REFACTORING.md  JINJA2_TEMPLATE_GUIDE.md  PROMPT_TEMPLATES.md  REFACTORING_SUMMARY.md
example/: simple.py
examples/: basic_chat.py  multi_turn_chat.py  parallel_processing.py  pipeline.yaml  run_yaml_pipeline.py  simple_chat.py
llm_processors/: __init__.py  base.py  context.py
llm_processors.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
llm_processors/core/: __init__.py  operators.py  packet.py  processor.py
llm_processors/pipeline/: __init__.py  loader.py  parallel_pipeline.py  sequential_pipeline.py
llm_processors/processors/: __init__.py  chat.py  chat_processor.py  filter.py  io.py  noop_processor.py  prompt.py  prompt_processor.py
llm_processors/utils/: __init__.py  adapters.py  converters.py
tests/: __init__.py  conftest.py  test_base.py  test_chat_processor.py  test_context.py  test_integration.py  test_noop_processor.py  test_pipeline.py  test_processors.py  test_prompt_processor.py
tests/core/: test_operators.py  test_packet.py
tests/processors/: test_chat.py  test_io.py  test_prompt.py
